# quantum_annealing_for_bed_control_optimization

./: .env.sample  .gitignore  BedControl2.1_5days.ipynb  README.md  config.py  pyproject.toml
input/: DB_Hospitals.csv  H00001_Beds.csv  H00001_Patients.csv  H00002_Beds.csv  H00002_Patients.csv  H00003_Beds.csv  H00003_Patients.csv  H00004_Beds.csv  H00004_Patients.csv  H00005_Beds.csv  H00005_Patients.csv  H00006_Beds.csv  H00006_Patients.csv  H00007_Beds.csv  H00007_Patients.csv  H00008_Beds.csv  H00008_Patients.csv  H00009_Beds.csv  H00009_Patients.csv  H00010_Beds.csv  H00010_Patients.csv  H00011_Beds.csv  H00011_Patients.csv  H00012_Beds.csv  H00012_Patients.csv  H00013_Beds.csv  H00013_Patients.csv  H00014_Beds.csv  H00014_Patients.csv  H00015_Beds.csv  H00015_Patients.csv  H00016_Beds.csv  H00016_Patients.csv  H00017_Beds.csv  H00017_Patients.csv  H00018_Beds.csv  H00018_Patients.csv  H00019_Beds.csv  H00019_Patients.csv  H00020_Beds.csv  (+249 more)
output/: DB_Patients_neal.csv  db_empty_beds_neal.csv
